fixed bitmoji spacing

--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,8 @@ code {
   justify-content: space-between;
   align-items: flex-start;
   padding: 5%;
+  padding-bottom: 7.5%;
+  padding-top: 7.5%;
 }
 
 .h-img{
@@ -66,12 +68,12 @@ code {
   justify-content: flex-end;
   align-items: flex-end;
   margin-right: 8%;
-  max-height: 80%;
+  margin-top: 2%;
 }
 
 .my-pic{
+  max-height: 30rem;
   border-radius: 25%;
-  height: auto;
 }
 
 .home-container{
@@ -101,6 +103,8 @@ code {
   gap: 1rem;
   border-top: solid 2px white;
   padding: 2%;
+  padding-top: 7.5%;
+  padding-bottom: 7.5%;
   border-bottom: solid 2px white;
 }
 
@@ -241,6 +245,8 @@ code {
   width: 70%;
   display: flex;
   flex-direction: column;
+  padding-top: 7.5%;
+  padding-bottom: 7.5%;
 }
 
 .about-container-1{
